--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -1,18 +1,28 @@
+html, body, #map {
+  height: 100%;
+  width: 100%;
+}
+
 #map {
-  height: 400px;
-  width: 80%;
-  display: inline-block;
+  z-index: 5;
 }
 
 #panel {
-  width: 16%;
+  width: 30%;
   padding: 20px;
   display: inline-block;
   vertical-align: top;
+  float: left;
+  z-index: 10;
 }
 
 .range-slider {
-  width: 50%;
+  width: 70%;
+  padding: 20px;
+  display: inline-block;
+  vertical-align: top;
+  float: right;
+  z-index: 10;
 }
 #forward {
   float: right;
@@ -25,11 +35,11 @@
     margin: 0.2em 0;
 }
 
-.legend {
+#legend {
   line-height: 18px;
   color: #555;
 }
-.legend p {
+#legend p {
   width: 18px;
   height: 18px;
   float: left;
@@ -38,11 +48,6 @@
 }
 
 /*
-html,
-body {
-	height: 100%;
-    width: 100%;
-}
 
 body {
 	position: relative;
