--- a/css/d3.css
+++ b/css/d3.css
@@ -41,22 +41,86 @@ body {
 }
 
 .states {
-  /*fill: #FFF;*/
   stroke: #444;
-  stroke-width: 2px;
+  stroke-width: 1px;
   stroke-linecap: flat;
 }
 
 /* Chart */
 
 .chart {
-  background-color: rgba(128,128,128,.2);
   border: medium solid #777;
   float: right;
   margin: 10px 20px 0 0;
+}
+.chartTitle {
+  font-family: sans-serif;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+.chartBackground {
+  fill: rgba(128,128,128,.2);
+}
+.chartFrame {
+  fill: none;
+  stroke: #777;
+  stroke-width: 3px;
+  shape-rendering: crispEdges;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #777;
+  stroke-width: 1px;
+  shape-rendering: crispEdges;
+}
+.axis text {
+  font-family: sans-serif;
+  font-size: 0.8em;
+  fill: #777;
 }
 
 .numbers {
   fill: white;
   font-family: sans-serif;
+  font-size: 0.6em;
+}
+
+/* Dropdown */
+
+.dropdown {
+  position: absolute;
+  top: 30px;
+  left: 250px;
+  z-index: 10;
+  font-family: sans-serif;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 2px;
+  border: 1px solid #777;
+  box-shadow: 2px 2px 4px #777;
+}
+option {
+  font-weight: normal;
+}
+
+/* Info Label */
+
+.infolabel {
+  position: absolute;
+  height: 50px;
+  min-width: 100px;
+  color: #FFF;
+  /*background-color: #000;*/
+  /*border: solid thin #FFF;*/
+  padding: 5px 10px;
+  top: -75px;
+}
+
+.infolabel h1 {
+  margin: 0 20px 0 0;
+  padding: 0;
+  display: inline-block;
+  line-height: 1em;
 }
