--- a/css/d3.css
+++ b/css/d3.css
@@ -3,6 +3,7 @@
 body {
   height: 100%;
   width: 100%;
+  background-color: #333;
 }
 
 /* Graph */
@@ -14,7 +15,7 @@ body {
 .axis path,
 .axis line {
   fill: none;
-  stroke: black;
+  stroke: #000;
   stroke-width: 1px;
   shape-rendering: crispEdges;
 }
@@ -41,7 +42,7 @@ body {
 }
 
 .states {
-  stroke: #444;
+  stroke: #333;
   stroke-width: 1px;
   stroke-linecap: flat;
 }
@@ -57,6 +58,7 @@ body {
   font-family: sans-serif;
   font-size: 1.2em;
   font-weight: bold;
+  fill: #AAA;
 }
 .chartBackground {
   fill: rgba(128,128,128,.2);
@@ -111,9 +113,7 @@ option {
   position: absolute;
   height: 50px;
   min-width: 100px;
-  color: #FFF;
-  /*background-color: #000;*/
-  /*border: solid thin #FFF;*/
+  color: #EEE;
   padding: 5px 10px;
   top: -75px;
 }
