--- a/css/IDW_test.css
+++ b/css/IDW_test.css
@@ -12,7 +12,7 @@ body {
 
 /*MENU*/
 #menu {
-    background: #fff;
+    background: #FFF;
     position: absolute;
     z-index: 1;
     top: 10px;
@@ -20,7 +20,7 @@ body {
     border-radius: 3px;
     width: 120px;
     border: 1px solid rgba(0,0,0,0.4);
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 #menu a {
     font-size: 13px;
@@ -37,24 +37,24 @@ body {
     border: none;
 }
 #menu a:hover {
-    background-color: #f8f8f8;
+    background-color: #F8F8F8;
     color: #404040;
 }
 #menu a.active {
-    background-color: #3887be;
-    color: #ffffff;
+    background-color: #B35734;
+    color: #FFFFFF;
 }
 #menu a.active:hover {
-    background: #3074a4;
+    background: #C27C60;
 }
 
 /*LEGEND*/
 .legend {
-  background-color: #fff;
+  background-color: #FFF;
   border-radius: 3px;
   bottom: 30px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font: 12px/5px "Helvetica Neue", Arial, Helvetica, sans-serif;
   padding: 10px;
   position: absolute;
   right: 10px;
@@ -64,7 +64,7 @@ body {
   margin: 0 0 10px;
 }
 .legend p {
-  margin-left: 30px;
+  margin-left: 50px;
   position: absolute;
   display: block;
   top: 0;
@@ -77,5 +77,37 @@ body {
   display: inline-block;
   margin-right: 5px;
   opacity: 0.8;
-  background-color: #d49a66;
+  background-color: #B35734;
+}
+
+/*USER INPUT*/
+.userinput {
+  background-color: #FFF;
+  border-radius: 3px;
+  bottom: 45px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  font: 12px/5px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  padding: 10px;
+  position: absolute;
+  left: 10px;
+  z-index: 1;
+}
+.userinput h4 {
+  margin: 0 0 10px;
+}
+.userinput p {
+  margin-left: 50px;
+  position: absolute;
+  display: block;
+  top: 0;
+}
+.userinput div {
+  position: relative;
+}
+.userinput div span {
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 5px;
+  opacity: 0.8;
+  background-color: #B35734;
 }
